logs/Slang/generated/keywords/5.6.2--keyword_wire.sv.log
name: wire
description: The 'wire' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_wire.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_wire.sv:8:8: error: expected declarator
    bit wire;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_wire.sv:8:13: error: expected declarator
    bit wire;
            ^
